update styling for buttons

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -59,7 +59,7 @@ h4 a {
     
 }
 .article-details {
-    min-height: 80px; 
+    min-height: 90px; 
 }
 img {
     width: 4em;
@@ -85,7 +85,7 @@ a:active {
     color: black;
     border: solid white 5px;
     border-radius: 20px;
-    padding: 20px 60px;
+    padding: 20px 30px;
     font-size: 1.3em;
     text-align: justify;
     margin: 20px;
@@ -125,20 +125,32 @@ a:active {
 .comment-bod {
     font-size: 1em;
     text-align: justify;
+    margin: 0;
 }
 .comment-item {
     background-color: rgba(255, 255, 255, 0.509); 
     color: black;
     border: solid white 5px;
     border-radius: 20px;
-    padding: 20px 60px;
-    font-size: 1.3em;
-    margin: 20px;
+    padding: 20px 30px;
+    font-size: 1em;
+    margin-top: 10px;
+    
 }
-
+.comment-p {
+    background: none;
+    color: black;
+    font-weight: bold;
+    border: none;
+    padding-left: 0;
+}
+button {
+    outline: none;
+}
 .comment-author {
     text-align: left;
     font-style: italic;
+    margin-top: 10px;
 }
 .comment-component {
     background-color: rgba(255, 255, 255, 0.509); 
@@ -154,27 +166,22 @@ a:active {
     color: black;
     border: solid white 5px;
     border-radius: 20px;
-    padding: 20px 10px;
-    font-size: 1.3em;
-    margin: 20px;
+    padding: 10px 10px 0 10px;
 }
 
 .comment-form .add-comment-form {
     width: 95%;
     border-radius: 10px;
     height: 3em;
-    margin: 2.5% 1.5%;
+    margin: 2.5% 1.5% 0 1.5%;
     padding: 10px;
 }
 .comment-form .submit-form {
     border-radius: 10px;
-    float: right;
     background-color: black;
     border: none;
     color: rgb(209, 250, 240);
-    padding: 5px, 10px;
-    margin-top: -13px;
-    margin-right: 17px;
+    margin: 10px;
 }
 .comment-rmv-btn {
     background-color: black;
@@ -194,4 +201,6 @@ a:active {
 .topic-pic a:hover img{
     width: 4.5em;
 }
-
+input {
+    outline: none;
+}
