--- a/src/components/App.css
+++ b/src/components/App.css
@@ -84,6 +84,12 @@ a:active {
     text-decoration: none;
 }
 
+.comment-link:hover {
+    
+    color: black;
+    font-weight: bold;
+}
+
 .article-item {
     background-color: rgba(255, 255, 255, 0.509); 
     color: black;
