add link to return to article from comments

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -219,3 +219,26 @@ input {
 .vote-num {
     margin-top: 5px;
 }
+.return-articles{
+text-align: left;
+padding-left: 0.8em;
+}
+.return-articles a {
+    font-weight: bold;
+}
+i {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+
+.right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+.left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
